--- a/compute_metrics.ipynb
+++ b/compute_metrics.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -450,13 +450,12 @@
     "            va='bottom',            # Vertical alignment\n",
     "            fontsize=8,             # Smaller font to avoid overlap\n",
     "            rotation=90,            # Rotate text to avoid overlap\n",
-    "            fontweight='bold'       # Make text bold for readability\n",
     "        )\n",
     "\n",
     "# Customize the plot\n",
-    "ax.set_xlabel('Model', fontsize=12, fontweight='bold')\n",
-    "ax.set_ylabel('Mean p1_simulation_error', fontsize=12, fontweight='bold')\n",
-    "ax.set_title('Mean Simulation Error by Model and Simulation Type', fontsize=14, fontweight='bold')\n",
+    "ax.set_xlabel('Model', fontsize=12)\n",
+    "ax.set_ylabel('Mean p1_simulation_error', fontsize=12)\n",
+    "ax.set_title('Mean Simulation Error by Model and Simulation Type', fontsize=14)\n",
     "ax.set_xticks(positions)\n",
     "ax.set_xticklabels(means.index, rotation=45, ha='right')\n",
     "ax.legend(title='Simulation Type')\n",
