--- a/compute_metrics.ipynb
+++ b/compute_metrics.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9626,7 +9626,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_simulation_error_by_type(df, outdir):\n",
+    "    \"\"\"\n",
+    "    Plot mean p1_simulation_error ±1 SE for each simulation type.\n",
+    "    \"\"\"\n",
+    "    os.makedirs(outdir, exist_ok=True)\n",
+    "    score_col = 'p1_simulation_error'\n",
+    "    group_col = 'arg_simulation_type'\n",
+    "\n",
+    "    # Aggregate mean, std, count\n",
+    "    stats = (\n",
+    "        df\n",
+    "        .groupby(group_col)[score_col]\n",
+    "        .agg(['mean', 'std', 'count'])\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "    # Compute standard error\n",
+    "    stats['stderr'] = stats['std'] / np.sqrt(stats['count'])\n",
+    "\n",
+    "    # Sort by simulation type for consistent ordering (optional)\n",
+    "    stats = stats.sort_values(group_col)\n",
+    "\n",
+    "    x = np.arange(len(stats))\n",
+    "    means = stats['mean'].values\n",
+    "    errs = stats['stderr'].values\n",
+    "    labels = stats[group_col].tolist()\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(6, 5))\n",
+    "    bars = ax.bar(x, means, yerr=errs, capsize=5, color='salmon', edgecolor='black')\n",
+    "    \n",
+    "    # Annotate bar values\n",
+    "    for xi, m in zip(x, means):\n",
+    "        ax.text(xi, m + 0.05, f\"{m:.2f}\", ha='center', va='bottom', fontsize=9)\n",
+    "\n",
+    "    ax.set_xticks(x)\n",
+    "    ax.set_xticklabels(labels, rotation=45, ha='right')\n",
+    "    ax.set_ylabel('Mean Simulation Error')\n",
+    "    ax.set_title('Simulation Error by Simulation Type (±1 SE)')\n",
+    "    ax.set_ylim(0,0.5)  # start y-axis at zero\n",
+    "    ax.grid(axis='y', linestyle='--', alpha=0.6)\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(outdir, 'simulation_error_by_type.png'))\n",
+    "    plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9639,7 +9690,8 @@
     "plot_p1_payoff_inclusion_vs_p2_coop(df, outdir)\n",
     "plot_rule_error_vs_simulation_error(df, outdir)\n",
     "plot_consistency_by_p1_model(df, outdir)\n",
-    "plot_simulation_vs_real_cooperation_by_type(df, outdir)"
+    "plot_simulation_vs_real_cooperation_by_type(df, outdir)\n",
+    "plot_simulation_error_by_type(df, outdir)"
    ]
   },
   {
@@ -14768,6 +14820,288 @@
     "    print(\"\\nP2 Simulation Prompt:\")\n",
     "    print(row['p2_simulation_prompt'])\n",
     "    print(\"\\n\" + \"=\"*60 + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_payoff_by_model(df, outdir):\n",
+    "    \"\"\"\n",
+    "    Bar chart of mean P1 and P2 payoff ±1 SE for each P1 model.\n",
+    "    \"\"\"\n",
+    "    os.makedirs(outdir, exist_ok=True)\n",
+    "\n",
+    "    # Aggregate mean, std, count for both payoffs\n",
+    "    stats = (\n",
+    "        df\n",
+    "        .groupby('arg_p1_model')[['p1_payoff','p2_payoff']]\n",
+    "        .agg(['mean','std','count'])\n",
+    "    )\n",
+    "    # Compute standard errors\n",
+    "    stats[('p1_payoff','stderr')] = stats[('p1_payoff','std')] / np.sqrt(stats[('p1_payoff','count')])\n",
+    "    stats[('p2_payoff','stderr')] = stats[('p2_payoff','std')] / np.sqrt(stats[('p2_payoff','count')])\n",
+    "\n",
+    "    # Prepare data\n",
+    "    models = stats.index.tolist()\n",
+    "    x = np.arange(len(models))\n",
+    "    width = 0.35\n",
+    "\n",
+    "    p1_means   = stats[('p1_payoff','mean')].values\n",
+    "    p1_errs    = stats[('p1_payoff','stderr')].values\n",
+    "    p2_means   = stats[('p2_payoff','mean')].values\n",
+    "    p2_errs    = stats[('p2_payoff','stderr')].values\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "    # P1 bars\n",
+    "    ax.bar(x - width/2, p1_means, width,\n",
+    "           yerr=p1_errs, capsize=5,\n",
+    "           label='P1 Payoff', color='cornflowerblue', edgecolor='black')\n",
+    "    # P2 bars\n",
+    "    ax.bar(x + width/2, p2_means, width,\n",
+    "           yerr=p2_errs, capsize=5,\n",
+    "           label='P2 Payoff', color='lightcoral', edgecolor='black')\n",
+    "\n",
+    "    # Annotate means\n",
+    "    for xi, m in zip(x - width/2, p1_means):\n",
+    "        ax.text(xi, m + max(p1_errs) + 0.05, f\"{m:.2f}\", ha='center', va='bottom', fontsize=9)\n",
+    "    for xi, m in zip(x + width/2, p2_means):\n",
+    "        ax.text(xi, m + max(p2_errs) + 0.05, f\"{m:.2f}\", ha='center', va='bottom', fontsize=9)\n",
+    "\n",
+    "    ax.set_xticks(x)\n",
+    "    ax.set_xticklabels(models, rotation=0, ha='center')\n",
+    "    ax.set_ylabel('Average Payoff')\n",
+    "    ax.set_title('Average Payoffs by Model (±1 SE)')\n",
+    "    ax.legend()\n",
+    "    ax.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(outdir, 'payoff_by_model.png'))\n",
+    "    plt.close()\n",
+    "\n",
+    "\n",
+    "def plot_payoff_by_sim_type(df, outdir):\n",
+    "    \"\"\"\n",
+    "    Bar chart of mean P1 and P2 payoff ±1 SE for each simulation type.\n",
+    "    \"\"\"\n",
+    "    os.makedirs(outdir, exist_ok=True)\n",
+    "\n",
+    "    # Aggregate mean, std, count for both payoffs\n",
+    "    stats = (\n",
+    "        df\n",
+    "        .groupby('arg_simulation_type')[['p1_payoff','p2_payoff']]\n",
+    "        .agg(['mean','std','count'])\n",
+    "    )\n",
+    "    # Compute standard errors\n",
+    "    stats[('p1_payoff','stderr')] = stats[('p1_payoff','std')] / np.sqrt(stats[('p1_payoff','count')])\n",
+    "    stats[('p2_payoff','stderr')] = stats[('p2_payoff','std')] / np.sqrt(stats[('p2_payoff','count')])\n",
+    "\n",
+    "    # Prepare data\n",
+    "    sim_types = stats.index.tolist()\n",
+    "    x = np.arange(len(sim_types))\n",
+    "    width = 0.35\n",
+    "\n",
+    "    p1_means = stats[('p1_payoff','mean')].values\n",
+    "    p1_errs  = stats[('p1_payoff','stderr')].values\n",
+    "    p2_means = stats[('p2_payoff','mean')].values\n",
+    "    p2_errs  = stats[('p2_payoff','stderr')].values\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "    # P1 bars\n",
+    "    ax.bar(x - width/2, p1_means, width,\n",
+    "           yerr=p1_errs, capsize=5,\n",
+    "           label='P1 Payoff', color='cornflowerblue', edgecolor='black')\n",
+    "    # P2 bars\n",
+    "    ax.bar(x + width/2, p2_means, width,\n",
+    "           yerr=p2_errs, capsize=5,\n",
+    "           label='P2 Payoff', color='lightcoral', edgecolor='black')\n",
+    "\n",
+    "    # Annotate means\n",
+    "    for xi, m in zip(x - width/2, p1_means):\n",
+    "        ax.text(xi, m + max(p1_errs) + 0.05, f\"{m:.2f}\", ha='center', va='bottom', fontsize=9)\n",
+    "    for xi, m in zip(x + width/2, p2_means):\n",
+    "        ax.text(xi, m + max(p2_errs)+ 0.05, f\"{m:.2f}\", ha='center', va='bottom', fontsize=9)\n",
+    "\n",
+    "    ax.set_xticks(x)\n",
+    "    ax.set_xticklabels(sim_types, rotation=45, ha='right')\n",
+    "    ax.set_ylabel('Average Payoff')\n",
+    "    ax.set_title('Average Payoffs by Simulation Type (±1 SE)')\n",
+    "    ax.legend()\n",
+    "    ax.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(outdir, 'payoff_by_simulation_type.png'))\n",
+    "    plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_p1_move_distribution(\n",
+    "    df,\n",
+    "    group_col: str,\n",
+    "    outdir: str,\n",
+    "    title: str,\n",
+    "    filename: str\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Stacked bar chart of P1 moves proportions (walk_out, trust, partial_trust)\n",
+    "    by group_col (e.g. 'arg_simulation_type' or 'arg_p1_model'), with total\n",
+    "    sample counts annotated above each bar.\n",
+    "    \"\"\"\n",
+    "    os.makedirs(outdir, exist_ok=True)\n",
+    "\n",
+    "    # Define the move categories and colors\n",
+    "    moves = ['walk_out', 'partial_trust', 'trust']\n",
+    "    colors = {\n",
+    "        'walk_out': '#1f77b4',\n",
+    "        'trust': '#ff7f0e',\n",
+    "        'partial_trust': '#2ca02c',\n",
+    "    }\n",
+    "\n",
+    "    # Count occurrences and compute proportions\n",
+    "    grouped_counts = df.groupby(group_col)['p1_move'] \\\n",
+    "                       .value_counts() \\\n",
+    "                       .unstack(fill_value=0) \\\n",
+    "                       .reindex(columns=moves, fill_value=0)\n",
+    "    totals = grouped_counts.sum(axis=1)\n",
+    "    proportions = grouped_counts.div(totals, axis=0)\n",
+    "\n",
+    "    # Setup plot\n",
+    "    labels = proportions.index.tolist()\n",
+    "    x = np.arange(len(labels))\n",
+    "    width = 0.6\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "\n",
+    "    # Plot stacked bars\n",
+    "    bottom = np.zeros(len(labels))\n",
+    "    for move in moves:\n",
+    "        vals = proportions[move].values\n",
+    "        ax.bar(\n",
+    "            x,\n",
+    "            vals,\n",
+    "            width,\n",
+    "            bottom=bottom,\n",
+    "            label=move.replace('_', ' ').title(),\n",
+    "            color=colors[move],\n",
+    "            edgecolor='black'\n",
+    "        )\n",
+    "        bottom += vals\n",
+    "\n",
+    "    # Annotate total counts above each bar\n",
+    "    for xi, tot in zip(x, totals.values):\n",
+    "        ax.text(\n",
+    "            xi, 1.02,\n",
+    "            f\"N = {tot}\",\n",
+    "            ha='center', va='bottom',\n",
+    "            fontsize=9\n",
+    "        )\n",
+    "\n",
+    "    # Formatting\n",
+    "    ax.set_xticks(x)\n",
+    "    ax.set_xticklabels(labels, rotation=45, ha='right')\n",
+    "    ax.set_ylim(0, 1.1)\n",
+    "    ax.set_ylabel(\"Proportion of P1 Move\")\n",
+    "    ax.set_title(title)\n",
+    "    ax.legend(loc='upper right')\n",
+    "    ax.grid(axis='y', linestyle='--', alpha=0.6)\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(outdir, filename))\n",
+    "    plt.close()\n",
+    "\n",
+    "\n",
+    "def plot_p1_move_by_simulation_type(df, outdir):\n",
+    "    plot_p1_move_distribution(\n",
+    "        df,\n",
+    "        group_col='arg_simulation_type',\n",
+    "        outdir=outdir,\n",
+    "        title='P1 Move Distribution by Simulation Type',\n",
+    "        filename='p1_move_by_simulation_type.png'\n",
+    "    )\n",
+    "\n",
+    "def plot_p1_move_by_p1_model(df, outdir):\n",
+    "    plot_p1_move_distribution(\n",
+    "        df,\n",
+    "        group_col='arg_p1_model',\n",
+    "        outdir=outdir,\n",
+    "        title='P1 Move Distribution by P1 Model',\n",
+    "        filename='p1_move_by_p1_model.png'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_simulation_frequency_by_model(df, outdir: str) -> None:\n",
+    "    \"\"\"\n",
+    "    Bar chart showing the fraction (and count) of episodes in which P1 chose to simulate,\n",
+    "    grouped by P1 model (arg_p1_model). Uses the 'simulate' column (0/1).\n",
+    "    \"\"\"\n",
+    "    os.makedirs(outdir, exist_ok=True)\n",
+    "\n",
+    "    # Group by model\n",
+    "    stats = (\n",
+    "        df\n",
+    "        .groupby('arg_p1_model')['p1_simulate']\n",
+    "        .agg(total=('count'), num_sim=('sum'))\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "    stats['freq'] = stats['num_sim'] / stats['total']\n",
+    "\n",
+    "    # Plot setup\n",
+    "    models = stats['arg_p1_model'].tolist()\n",
+    "    freqs = stats['freq'].values\n",
+    "    counts = stats['total'].values\n",
+    "\n",
+    "    x = np.arange(len(models))\n",
+    "    width = 0.6\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "    bars = ax.bar(x, freqs, width, color='skyblue', edgecolor='black')\n",
+    "\n",
+    "    # Annotate counts and percentages\n",
+    "    for xi, bar, tot, num in zip(x, bars, counts, stats['num_sim'].values):\n",
+    "        height = bar.get_height()\n",
+    "        ax.text(\n",
+    "            xi, height + 0.02,\n",
+    "            f\"{num}/{tot}\\n{height:.0%}\",\n",
+    "            ha='center', va='bottom', fontsize=9\n",
+    "        )\n",
+    "\n",
+    "    # Formatting\n",
+    "    ax.set_xticks(x)\n",
+    "    ax.set_xticklabels(models, rotation=45, ha='right')\n",
+    "    ax.set_ylim(0, 1.05)\n",
+    "    ax.set_ylabel(\"Simulation Frequency\")\n",
+    "    ax.set_title(\"P1 Simulation Frequency by Model\")\n",
+    "    ax.grid(axis='y', linestyle='--', alpha=0.6)\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(outdir, \"simulation_frequency_by_model.png\"))\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outdir = \"figures\"\n",
+    "os.makedirs(outdir, exist_ok=True)\n",
+    "plot_payoff_by_model(df, outdir)\n",
+    "plot_payoff_by_sim_type(df, outdir)\n",
+    "plot_p1_move_by_simulation_type(df, outdir)\n",
+    "plot_p1_move_by_p1_model(df, outdir)\n",
+    "plot_simulation_frequency_by_model(df, outdir)"
    ]
   }
  ],
